@@ -8,11 +8,11 @@ Section: gnome
 Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: Laurent Bigonville <bigon@debian.org>, Michael Biebl <biebl@debian.org>
-Build-Depends: cdbs (>= 0.4.41),
+Build-Depends: cdbs (>= 0.4.93~),
                dh-autoreconf,
                gnome-pkg-tools (>= 0.10),
                gnome-common,
-               debhelper (>= 8),
+               debhelper (>= 8.1.3~),
                libglib2.0-dev (>= 2.30.0),
                libgtk-3-dev (>= 3.0.0),
                libwebkitgtk-3.0-dev,
@@ -47,6 +47,8 @@ Section: libs
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          libgoa-1.0-common (= ${source:Version})
+Pre-Depends: ${misc:Pre-Depends}
+Multi-Arch: same
 Description: library for GNOME Online Accounts
  This package contains the GNOME Online Accounts service, which provides a
  centralized place for managing online accounts (Google, etc) for the
@@ -74,6 +76,7 @@ Package: libgoa-1.0-common
 Architecture: all
 Section: libs
 Depends: ${misc:Depends}
+Multi-Arch: foreign
 Description: library for GNOME Online Accounts - common files
  This package contains the GNOME Online Accounts service, which provides a
  centralized place for managing online accounts (Google, etc) for the
