@@ -1,4 +1,4 @@
 usr/include/*
-usr/lib/pkgconfig/*
-usr/lib/*.so
+usr/lib/*/pkgconfig/*
+usr/lib/*/*.so
 usr/share/gir-1.0/*.gir
