@@ -10,8 +10,9 @@ gnome-online-accounts (3.3.0-1) UNRELEASED; urgency=low
   * debian/control.in:
     - Bump Standards-Version to 3.9.3 (no further changes)
     - Drop duplicate Section to please lintian
+  * Convert to multi-arch
 
- -- Laurent Bigonville <bigon@debian.org>  Sun, 11 Mar 2012 02:37:43 +0100
+ -- Laurent Bigonville <bigon@debian.org>  Sun, 11 Mar 2012 18:00:32 +0100
 
 gnome-online-accounts (3.2.1-3) unstable; urgency=low
 
